--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Chain Reaction</string>
+
+    <!-- BUTTON LABELS -->
+    <string name="btn_start">Start</string>
+    <string name="btn_show">Show</string>
 </resources>
